[LayoutNG] Fix NGBoxFragmentPainter to paint background of scrolling contents layer

The code to paint the background of scrolling contents layer
was missing in NGBoxFragmentPainter. This patch copies the
logic from BoxPainter.

Issue 861623 found that this code path runs when all of the
following conditions are true:
* In Chrome (not in content_shell).
* When display / CSS pixel >= 1.5.
* When background is set to 'overflow: auto' box.

This patch also fixes 3 CSS contain tests that has 'contain:
paint', 'overflow-[xy]: scroll', and background color to an
inline formatting context.

Bug: 861623
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I31d0b407e794409552dcf89f5c8005fafc5f99a6
Reviewed-on: https://chromium-review.googlesource.com/1215143
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589809}
Former-commit-id: 1160492e162ce25d33ba67bf738f6e28e33d8b20